<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    tools:context=".MainActivity">

    <!-- WebView prikaz -->
    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/loadingSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/loadingText"
            style="@style/LosMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/loading"
            android:padding="8dp" />
    </LinearLayout>

    <!-- Layout za prikaz greške -->
    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <TextView
            android:id="@+id/errorText"
            style="@style/LosMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error"
            android:padding="16dp" />

        <Button
            android:id="@+id/errorRetry"
            style="@style/LosButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <!-- Donји тастери -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_settings"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/open_settings"
            style="@style/LosButton" />

        <Button
            android:id="@+id/btn_barcode"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scan_barcode"
            style="@style/LosButton" />
    </LinearLayout>
</LinearLayout>
